--- a/LR_Forecasting_Mini_Course_Sales.ipynb
+++ b/LR_Forecasting_Mini_Course_Sales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7YiM7iJYDizkKqq5DHjXf",
+      "authorship_tag": "ABX9TyP3nZHfYa4+xfI8KFr2Y8wv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,22 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "This is first commit from colab"
+      ],
       "metadata": {
-        "id": "MUjOKXrQLQK-"
+        "id": "mZhnSh26NHrE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KKdzZUHRNMDj"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
