Kaggle Notebook | PGS_S3E21_sub_2.ipynb | Version 5

--- a/Kaggle/Competitions/pgs-s3e21-sub-2-ipynb.ipynb
+++ b/Kaggle/Competitions/pgs-s3e21-sub-2-ipynb.ipynb
@@ -3,23 +3,23 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dfa9a4b8",
+   "id": "d99eed62",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_kg_hide-input": false,
     "_kg_hide-output": false,
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2023-08-27T14:00:57.828415Z",
-     "iopub.status.busy": "2023-08-27T14:00:57.827928Z",
-     "iopub.status.idle": "2023-08-27T14:00:57.849226Z",
-     "shell.execute_reply": "2023-08-27T14:00:57.847659Z"
+     "iopub.execute_input": "2023-08-27T15:08:34.903171Z",
+     "iopub.status.busy": "2023-08-27T15:08:34.902441Z",
+     "iopub.status.idle": "2023-08-27T15:08:34.921534Z",
+     "shell.execute_reply": "2023-08-27T15:08:34.920447Z"
     },
     "papermill": {
-     "duration": 0.031507,
-     "end_time": "2023-08-27T14:00:57.852107",
+     "duration": 0.031569,
+     "end_time": "2023-08-27T15:08:34.925052",
      "exception": false,
-     "start_time": "2023-08-27T14:00:57.820600",
+     "start_time": "2023-08-27T15:08:34.893483",
      "status": "completed"
     },
     "tags": []
@@ -57,13 +57,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a192c584",
+   "id": "ef54a8c6",
    "metadata": {
     "papermill": {
-     "duration": 0.004886,
-     "end_time": "2023-08-27T14:00:57.862684",
+     "duration": 0.006017,
+     "end_time": "2023-08-27T15:08:34.937798",
      "exception": false,
-     "start_time": "2023-08-27T14:00:57.857798",
+     "start_time": "2023-08-27T15:08:34.931781",
      "status": "completed"
     },
     "tags": []
@@ -79,13 +79,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b19c73a0",
+   "id": "b0ef8058",
    "metadata": {
     "papermill": {
-     "duration": 0.004766,
-     "end_time": "2023-08-27T14:00:57.872495",
+     "duration": 0.00605,
+     "end_time": "2023-08-27T15:08:34.950321",
      "exception": false,
-     "start_time": "2023-08-27T14:00:57.867729",
+     "start_time": "2023-08-27T15:08:34.944271",
      "status": "completed"
     },
     "tags": []
@@ -96,13 +96,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ee727f2",
+   "id": "302b7180",
    "metadata": {
     "papermill": {
-     "duration": 0.004602,
-     "end_time": "2023-08-27T14:00:57.882080",
+     "duration": 0.005856,
+     "end_time": "2023-08-27T15:08:34.962549",
      "exception": false,
-     "start_time": "2023-08-27T14:00:57.877478",
+     "start_time": "2023-08-27T15:08:34.956693",
      "status": "completed"
     },
     "tags": []
@@ -119,13 +119,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b067d399",
+   "id": "59ea6ca6",
    "metadata": {
     "papermill": {
-     "duration": 0.00486,
-     "end_time": "2023-08-27T14:00:57.891822",
+     "duration": 0.005911,
+     "end_time": "2023-08-27T15:08:34.974753",
      "exception": false,
-     "start_time": "2023-08-27T14:00:57.886962",
+     "start_time": "2023-08-27T15:08:34.968842",
      "status": "completed"
     },
     "tags": []
@@ -137,13 +137,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50287a9b",
+   "id": "efb1a36f",
    "metadata": {
     "papermill": {
-     "duration": 0.004636,
-     "end_time": "2023-08-27T14:00:57.901573",
+     "duration": 0.005848,
+     "end_time": "2023-08-27T15:08:34.986810",
      "exception": false,
-     "start_time": "2023-08-27T14:00:57.896937",
+     "start_time": "2023-08-27T15:08:34.980962",
      "status": "completed"
     },
     "tags": []
@@ -156,13 +156,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abbaccce",
+   "id": "3efdf11a",
    "metadata": {
     "papermill": {
-     "duration": 0.004604,
-     "end_time": "2023-08-27T14:00:57.911145",
+     "duration": 0.006605,
+     "end_time": "2023-08-27T15:08:35.001795",
      "exception": false,
-     "start_time": "2023-08-27T14:00:57.906541",
+     "start_time": "2023-08-27T15:08:34.995190",
      "status": "completed"
     },
     "tags": []
@@ -177,19 +177,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d6df07c0",
+   "id": "9b56dab0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-27T14:00:57.924756Z",
-     "iopub.status.busy": "2023-08-27T14:00:57.924324Z",
-     "iopub.status.idle": "2023-08-27T14:00:57.959359Z",
-     "shell.execute_reply": "2023-08-27T14:00:57.958275Z"
+     "iopub.execute_input": "2023-08-27T15:08:35.024266Z",
+     "iopub.status.busy": "2023-08-27T15:08:35.023883Z",
+     "iopub.status.idle": "2023-08-27T15:08:35.060166Z",
+     "shell.execute_reply": "2023-08-27T15:08:35.059243Z"
     },
     "papermill": {
-     "duration": 0.046081,
-     "end_time": "2023-08-27T14:00:57.962212",
+     "duration": 0.048387,
+     "end_time": "2023-08-27T15:08:35.063034",
      "exception": false,
-     "start_time": "2023-08-27T14:00:57.916131",
+     "start_time": "2023-08-27T15:08:35.014647",
      "status": "completed"
     },
     "tags": []
@@ -203,13 +203,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccdcc4b1",
+   "id": "a82eca3f",
    "metadata": {
     "papermill": {
-     "duration": 0.004914,
-     "end_time": "2023-08-27T14:00:57.972535",
+     "duration": 0.005891,
+     "end_time": "2023-08-27T15:08:35.075459",
      "exception": false,
-     "start_time": "2023-08-27T14:00:57.967621",
+     "start_time": "2023-08-27T15:08:35.069568",
      "status": "completed"
     },
     "tags": []
@@ -228,19 +228,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c2d6d3e5",
+   "id": "9fd16f9b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-27T14:00:57.984637Z",
-     "iopub.status.busy": "2023-08-27T14:00:57.984185Z",
-     "iopub.status.idle": "2023-08-27T14:00:58.024522Z",
-     "shell.execute_reply": "2023-08-27T14:00:58.023335Z"
+     "iopub.execute_input": "2023-08-27T15:08:35.091019Z",
+     "iopub.status.busy": "2023-08-27T15:08:35.090206Z",
+     "iopub.status.idle": "2023-08-27T15:08:35.132385Z",
+     "shell.execute_reply": "2023-08-27T15:08:35.130973Z"
     },
     "papermill": {
-     "duration": 0.049732,
-     "end_time": "2023-08-27T14:00:58.027491",
+     "duration": 0.053724,
+     "end_time": "2023-08-27T15:08:35.135953",
      "exception": false,
-     "start_time": "2023-08-27T14:00:57.977759",
+     "start_time": "2023-08-27T15:08:35.082229",
      "status": "completed"
     },
     "tags": []
@@ -480,19 +480,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1d67260d",
+   "id": "ebd81ebc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-27T14:00:58.040896Z",
-     "iopub.status.busy": "2023-08-27T14:00:58.040440Z",
-     "iopub.status.idle": "2023-08-27T14:00:58.048436Z",
-     "shell.execute_reply": "2023-08-27T14:00:58.047197Z"
+     "iopub.execute_input": "2023-08-27T15:08:35.152686Z",
+     "iopub.status.busy": "2023-08-27T15:08:35.152226Z",
+     "iopub.status.idle": "2023-08-27T15:08:35.160005Z",
+     "shell.execute_reply": "2023-08-27T15:08:35.158935Z"
     },
     "papermill": {
-     "duration": 0.017953,
-     "end_time": "2023-08-27T14:00:58.051147",
+     "duration": 0.019168,
+     "end_time": "2023-08-27T15:08:35.162551",
      "exception": false,
-     "start_time": "2023-08-27T14:00:58.033194",
+     "start_time": "2023-08-27T15:08:35.143383",
      "status": "completed"
     },
     "tags": []
@@ -516,19 +516,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "64a25020",
+   "id": "74b4455e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-27T14:00:58.065199Z",
-     "iopub.status.busy": "2023-08-27T14:00:58.064426Z",
-     "iopub.status.idle": "2023-08-27T14:00:58.196827Z",
-     "shell.execute_reply": "2023-08-27T14:00:58.195477Z"
+     "iopub.execute_input": "2023-08-27T15:08:35.178252Z",
+     "iopub.status.busy": "2023-08-27T15:08:35.177778Z",
+     "iopub.status.idle": "2023-08-27T15:08:35.301516Z",
+     "shell.execute_reply": "2023-08-27T15:08:35.299899Z"
     },
     "papermill": {
-     "duration": 0.142703,
-     "end_time": "2023-08-27T14:00:58.199684",
+     "duration": 0.135006,
+     "end_time": "2023-08-27T15:08:35.304468",
      "exception": false,
-     "start_time": "2023-08-27T14:00:58.056981",
+     "start_time": "2023-08-27T15:08:35.169462",
      "status": "completed"
     },
     "tags": []
@@ -832,19 +832,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2ea1e7a9",
+   "id": "976648f9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-08-27T14:00:58.214720Z",
-     "iopub.status.busy": "2023-08-27T14:00:58.214318Z",
-     "iopub.status.idle": "2023-08-27T14:00:58.234292Z",
-     "shell.execute_reply": "2023-08-27T14:00:58.232932Z"
+     "iopub.execute_input": "2023-08-27T15:08:35.321767Z",
+     "iopub.status.busy": "2023-08-27T15:08:35.321316Z",
+     "iopub.status.idle": "2023-08-27T15:08:35.344266Z",
+     "shell.execute_reply": "2023-08-27T15:08:35.342929Z"
     },
     "papermill": {
-     "duration": 0.031316,
-     "end_time": "2023-08-27T14:00:58.237225",
+     "duration": 0.03543,
+     "end_time": "2023-08-27T15:08:35.347628",
      "exception": false,
-     "start_time": "2023-08-27T14:00:58.205909",
+     "start_time": "2023-08-27T15:08:35.312198",
      "status": "completed"
     },
     "tags": []
@@ -906,14 +906,160 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "37518a19",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-08-27T15:08:35.365462Z",
+     "iopub.status.busy": "2023-08-27T15:08:35.365033Z",
+     "iopub.status.idle": "2023-08-27T15:08:35.466269Z",
+     "shell.execute_reply": "2023-08-27T15:08:35.464889Z"
+    },
+    "papermill": {
+     "duration": 0.113647,
+     "end_time": "2023-08-27T15:08:35.469000",
+     "exception": false,
+     "start_time": "2023-08-27T15:08:35.355353",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['O2_1', 'O2_2', 'O2_3', 'O2_4', 'O2_5', 'O2_6', 'O2_7', 'NH4_1',\n",
+      "       'NH4_2', 'NH4_3', 'NH4_4', 'NH4_5', 'NH4_6', 'NH4_7', 'NO2_1', 'NO2_2',\n",
+      "       'NO2_3', 'NO2_4', 'NO2_5', 'NO2_6', 'NO2_7', 'NO3_1', 'NO3_2', 'NO3_3',\n",
+      "       'NO3_4', 'NO3_5', 'NO3_6', 'NO3_7', 'BOD5_1', 'BOD5_2', 'BOD5_3',\n",
+      "       'BOD5_4', 'BOD5_5', 'BOD5_6', 'BOD5_7'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# collecting required data from the og train set\n",
+    "description = og_train_set.describe()\n",
+    "columns = og_train_set.columns\n",
+    "columns = columns.drop(\"target\")\n",
+    "print(columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "807d31b3",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-08-27T15:08:35.486710Z",
+     "iopub.status.busy": "2023-08-27T15:08:35.486261Z",
+     "iopub.status.idle": "2023-08-27T15:08:35.491962Z",
+     "shell.execute_reply": "2023-08-27T15:08:35.490767Z"
+    },
+    "papermill": {
+     "duration": 0.0173,
+     "end_time": "2023-08-27T15:08:35.494239",
+     "exception": false,
+     "start_time": "2023-08-27T15:08:35.476939",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# from the og data set we are checking what percentage of 0' or missing data are there in each column\n",
+    "def fill_missing_data_perc(df):\n",
+    "    df = df.fillna(0)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ec8f6db1",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-08-27T15:08:35.511622Z",
+     "iopub.status.busy": "2023-08-27T15:08:35.511196Z",
+     "iopub.status.idle": "2023-08-27T15:08:35.531556Z",
+     "shell.execute_reply": "2023-08-27T15:08:35.530161Z"
+    },
+    "papermill": {
+     "duration": 0.032588,
+     "end_time": "2023-08-27T15:08:35.534431",
+     "exception": false,
+     "start_time": "2023-08-27T15:08:35.501843",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['O2_1' '1.0' 'O2_2' '1.0' 'O2_3' '78.0' 'O2_4' '79.0' 'O2_5' '78.0'\n",
+      " 'O2_6' '76.0' 'O2_7' '76.0' 'NH4_1' '1.0' 'NH4_2' '1.0' 'NH4_3' '78.0'\n",
+      " 'NH4_4' '79.0' 'NH4_5' '78.0' 'NH4_6' '75.0' 'NH4_7' '75.0' 'NO2_1' '2.0'\n",
+      " 'NO2_2' '2.0' 'NO2_3' '78.0' 'NO2_4' '79.0' 'NO2_5' '78.0' 'NO2_6' '77.0'\n",
+      " 'NO2_7' '76.0' 'NO3_1' '4.0' 'NO3_2' '3.0' 'NO3_3' '79.0' 'NO3_4' '79.0'\n",
+      " 'NO3_5' '78.0' 'NO3_6' '75.0' 'NO3_7' '76.0' 'BOD5_1' '1.0' 'BOD5_2'\n",
+      " '1.0' 'BOD5_3' '78.0' 'BOD5_4' '79.0' 'BOD5_5' '78.0' 'BOD5_6' '75.0'\n",
+      " 'BOD5_7' '75.0']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# counting the persentage of 0's in each column\n",
+    "def get_perc_of_0_value():\n",
+    "    temp_df = fill_missing_data_perc(og_train_set)\n",
+    "    perc_0 = np.array([])\n",
+    "    for column in columns:\n",
+    "        perc = (((temp_df[column]==0).sum()/len(og_train_set[column])) * 100).round()\n",
+    "        perc_0 = np.append(perc_0, (column, perc))\n",
+    "    return perc_0\n",
+    "\n",
+    "column_0_ratio = get_perc_of_0_value()\n",
+    "print(column_0_ratio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1872dc51",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-08-27T15:08:35.552435Z",
+     "iopub.status.busy": "2023-08-27T15:08:35.552006Z",
+     "iopub.status.idle": "2023-08-27T15:08:35.560375Z",
+     "shell.execute_reply": "2023-08-27T15:08:35.558951Z"
+    },
+    "papermill": {
+     "duration": 0.020468,
+     "end_time": "2023-08-27T15:08:35.562926",
+     "exception": false,
+     "start_time": "2023-08-27T15:08:35.542458",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# creating a fresh set of training dat with same columns\n",
+    "train_set = pd.DataFrame(columns=columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "94e2983e",
+   "id": "25657c8f",
    "metadata": {
     "papermill": {
-     "duration": 0.006139,
-     "end_time": "2023-08-27T14:00:58.249903",
+     "duration": 0.007465,
+     "end_time": "2023-08-27T15:08:35.578592",
      "exception": false,
-     "start_time": "2023-08-27T14:00:58.243764",
+     "start_time": "2023-08-27T15:08:35.571127",
      "status": "completed"
     },
     "tags": []
@@ -942,14 +1088,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 15.909854,
-   "end_time": "2023-08-27T14:00:59.178786",
+   "duration": 13.234268,
+   "end_time": "2023-08-27T15:08:36.609895",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-08-27T14:00:43.268932",
+   "start_time": "2023-08-27T15:08:23.375627",
    "version": "2.4.0"
   }
  },
