Kaggle Notebook | Spaceship_Titanic_regression | Version 3

--- a/Kaggle/Competitions/spaceship-titanic-regression.ipynb
+++ b/Kaggle/Competitions/spaceship-titanic-regression.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c652f017",
+   "id": "7980bee5",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2023-09-01T16:29:56.500235Z",
-     "iopub.status.busy": "2023-09-01T16:29:56.499042Z",
-     "iopub.status.idle": "2023-09-01T16:29:56.940728Z",
-     "shell.execute_reply": "2023-09-01T16:29:56.939204Z"
+     "iopub.execute_input": "2023-09-01T17:01:34.284177Z",
+     "iopub.status.busy": "2023-09-01T17:01:34.283285Z",
+     "iopub.status.idle": "2023-09-01T17:01:34.707600Z",
+     "shell.execute_reply": "2023-09-01T17:01:34.706480Z"
     },
     "papermill": {
-     "duration": 0.454839,
-     "end_time": "2023-09-01T16:29:56.943653",
+     "duration": 0.437478,
+     "end_time": "2023-09-01T17:01:34.710275",
      "exception": false,
-     "start_time": "2023-09-01T16:29:56.488814",
+     "start_time": "2023-09-01T17:01:34.272797",
      "status": "completed"
     },
     "tags": []
@@ -55,13 +55,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e03b9396",
+   "id": "ac059c3b",
    "metadata": {
     "papermill": {
-     "duration": 0.007487,
-     "end_time": "2023-09-01T16:29:56.959296",
+     "duration": 0.008034,
+     "end_time": "2023-09-01T17:01:34.726775",
      "exception": false,
-     "start_time": "2023-09-01T16:29:56.951809",
+     "start_time": "2023-09-01T17:01:34.718741",
      "status": "completed"
     },
     "tags": []
@@ -73,13 +73,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a452a438",
+   "id": "3c72b0b2",
    "metadata": {
     "papermill": {
-     "duration": 0.007387,
-     "end_time": "2023-09-01T16:29:56.974980",
+     "duration": 0.007846,
+     "end_time": "2023-09-01T17:01:34.742749",
      "exception": false,
-     "start_time": "2023-09-01T16:29:56.967593",
+     "start_time": "2023-09-01T17:01:34.734903",
      "status": "completed"
     },
     "tags": []
@@ -98,13 +98,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "584a1150",
+   "id": "adb91b76",
    "metadata": {
     "papermill": {
-     "duration": 0.007551,
-     "end_time": "2023-09-01T16:29:56.990641",
+     "duration": 0.008028,
+     "end_time": "2023-09-01T17:01:34.759300",
      "exception": false,
-     "start_time": "2023-09-01T16:29:56.983090",
+     "start_time": "2023-09-01T17:01:34.751272",
      "status": "completed"
     },
     "tags": []
@@ -116,13 +116,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e291c858",
+   "id": "d6c5bffe",
    "metadata": {
     "papermill": {
-     "duration": 0.007552,
-     "end_time": "2023-09-01T16:29:57.006356",
+     "duration": 0.007919,
+     "end_time": "2023-09-01T17:01:34.775320",
      "exception": false,
-     "start_time": "2023-09-01T16:29:56.998804",
+     "start_time": "2023-09-01T17:01:34.767401",
      "status": "completed"
     },
     "tags": []
@@ -133,13 +133,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43070006",
+   "id": "3c61e19d",
    "metadata": {
     "papermill": {
-     "duration": 0.007496,
-     "end_time": "2023-09-01T16:29:57.021470",
+     "duration": 0.008235,
+     "end_time": "2023-09-01T17:01:34.792128",
      "exception": false,
-     "start_time": "2023-09-01T16:29:57.013974",
+     "start_time": "2023-09-01T17:01:34.783893",
      "status": "completed"
     },
     "tags": []
@@ -153,13 +153,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82aea154",
+   "id": "8fd23b1c",
    "metadata": {
     "papermill": {
-     "duration": 0.007325,
-     "end_time": "2023-09-01T16:29:57.036927",
+     "duration": 0.008003,
+     "end_time": "2023-09-01T17:01:34.808522",
      "exception": false,
-     "start_time": "2023-09-01T16:29:57.029602",
+     "start_time": "2023-09-01T17:01:34.800519",
      "status": "completed"
     },
     "tags": []
@@ -176,13 +176,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34109358",
+   "id": "eaf49958",
    "metadata": {
     "papermill": {
-     "duration": 0.007507,
-     "end_time": "2023-09-01T16:29:57.052144",
+     "duration": 0.007852,
+     "end_time": "2023-09-01T17:01:34.824654",
      "exception": false,
-     "start_time": "2023-09-01T16:29:57.044637",
+     "start_time": "2023-09-01T17:01:34.816802",
      "status": "completed"
     },
     "tags": []
@@ -194,13 +194,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36835f79",
+   "id": "b6b7ef94",
    "metadata": {
     "papermill": {
-     "duration": 0.007411,
-     "end_time": "2023-09-01T16:29:57.067312",
+     "duration": 0.008014,
+     "end_time": "2023-09-01T17:01:34.840919",
      "exception": false,
-     "start_time": "2023-09-01T16:29:57.059901",
+     "start_time": "2023-09-01T17:01:34.832905",
      "status": "completed"
     },
     "tags": []
@@ -228,19 +228,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f70f8e73",
+   "id": "9b599807",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-01T16:29:57.084779Z",
-     "iopub.status.busy": "2023-09-01T16:29:57.084220Z",
-     "iopub.status.idle": "2023-09-01T16:29:57.201730Z",
-     "shell.execute_reply": "2023-09-01T16:29:57.200586Z"
+     "iopub.execute_input": "2023-09-01T17:01:34.859071Z",
+     "iopub.status.busy": "2023-09-01T17:01:34.858513Z",
+     "iopub.status.idle": "2023-09-01T17:01:34.996169Z",
+     "shell.execute_reply": "2023-09-01T17:01:34.995303Z"
     },
     "papermill": {
-     "duration": 0.129665,
-     "end_time": "2023-09-01T16:29:57.204562",
+     "duration": 0.149786,
+     "end_time": "2023-09-01T17:01:34.998850",
      "exception": false,
-     "start_time": "2023-09-01T16:29:57.074897",
+     "start_time": "2023-09-01T17:01:34.849064",
      "status": "completed"
     },
     "tags": []
@@ -256,19 +256,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9a914ee0",
+   "id": "4012b986",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-01T16:29:57.222161Z",
-     "iopub.status.busy": "2023-09-01T16:29:57.221758Z",
-     "iopub.status.idle": "2023-09-01T16:29:57.230036Z",
-     "shell.execute_reply": "2023-09-01T16:29:57.228725Z"
+     "iopub.execute_input": "2023-09-01T17:01:35.017881Z",
+     "iopub.status.busy": "2023-09-01T17:01:35.017076Z",
+     "iopub.status.idle": "2023-09-01T17:01:35.025340Z",
+     "shell.execute_reply": "2023-09-01T17:01:35.024430Z"
     },
     "papermill": {
-     "duration": 0.020416,
-     "end_time": "2023-09-01T16:29:57.232922",
+     "duration": 0.020501,
+     "end_time": "2023-09-01T17:01:35.027756",
      "exception": false,
-     "start_time": "2023-09-01T16:29:57.212506",
+     "start_time": "2023-09-01T17:01:35.007255",
      "status": "completed"
     },
     "tags": []
@@ -292,19 +292,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fd92c8ea",
+   "id": "89a86a22",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-01T16:29:57.251294Z",
-     "iopub.status.busy": "2023-09-01T16:29:57.250907Z",
-     "iopub.status.idle": "2023-09-01T16:29:57.278544Z",
-     "shell.execute_reply": "2023-09-01T16:29:57.277678Z"
+     "iopub.execute_input": "2023-09-01T17:01:35.046872Z",
+     "iopub.status.busy": "2023-09-01T17:01:35.046437Z",
+     "iopub.status.idle": "2023-09-01T17:01:35.072417Z",
+     "shell.execute_reply": "2023-09-01T17:01:35.071528Z"
     },
     "papermill": {
-     "duration": 0.03993,
-     "end_time": "2023-09-01T16:29:57.280829",
+     "duration": 0.038632,
+     "end_time": "2023-09-01T17:01:35.074984",
      "exception": false,
-     "start_time": "2023-09-01T16:29:57.240899",
+     "start_time": "2023-09-01T17:01:35.036352",
      "status": "completed"
     },
     "tags": []
@@ -485,19 +485,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b5caf79f",
+   "id": "58828b12",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-01T16:29:57.299721Z",
-     "iopub.status.busy": "2023-09-01T16:29:57.298672Z",
-     "iopub.status.idle": "2023-09-01T16:29:57.334258Z",
-     "shell.execute_reply": "2023-09-01T16:29:57.332649Z"
+     "iopub.execute_input": "2023-09-01T17:01:35.095256Z",
+     "iopub.status.busy": "2023-09-01T17:01:35.094355Z",
+     "iopub.status.idle": "2023-09-01T17:01:35.125324Z",
+     "shell.execute_reply": "2023-09-01T17:01:35.124240Z"
     },
     "papermill": {
-     "duration": 0.047925,
-     "end_time": "2023-09-01T16:29:57.337056",
+     "duration": 0.044782,
+     "end_time": "2023-09-01T17:01:35.128675",
      "exception": false,
-     "start_time": "2023-09-01T16:29:57.289131",
+     "start_time": "2023-09-01T17:01:35.083893",
      "status": "completed"
     },
     "tags": []
@@ -537,19 +537,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2bc8a999",
+   "id": "aa99799d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-01T16:29:57.357300Z",
-     "iopub.status.busy": "2023-09-01T16:29:57.356849Z",
-     "iopub.status.idle": "2023-09-01T16:29:57.394861Z",
-     "shell.execute_reply": "2023-09-01T16:29:57.393872Z"
+     "iopub.execute_input": "2023-09-01T17:01:35.150216Z",
+     "iopub.status.busy": "2023-09-01T17:01:35.149484Z",
+     "iopub.status.idle": "2023-09-01T17:01:35.183743Z",
+     "shell.execute_reply": "2023-09-01T17:01:35.182637Z"
     },
     "papermill": {
-     "duration": 0.050931,
-     "end_time": "2023-09-01T16:29:57.397199",
+     "duration": 0.047789,
+     "end_time": "2023-09-01T17:01:35.186257",
      "exception": false,
-     "start_time": "2023-09-01T16:29:57.346268",
+     "start_time": "2023-09-01T17:01:35.138468",
      "status": "completed"
     },
     "tags": []
@@ -695,19 +695,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bd281eff",
+   "id": "77401c30",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-01T16:29:57.417253Z",
-     "iopub.status.busy": "2023-09-01T16:29:57.416519Z",
-     "iopub.status.idle": "2023-09-01T16:29:58.810714Z",
-     "shell.execute_reply": "2023-09-01T16:29:58.809412Z"
+     "iopub.execute_input": "2023-09-01T17:01:35.208248Z",
+     "iopub.status.busy": "2023-09-01T17:01:35.207846Z",
+     "iopub.status.idle": "2023-09-01T17:01:36.558706Z",
+     "shell.execute_reply": "2023-09-01T17:01:36.557468Z"
     },
     "papermill": {
-     "duration": 1.407429,
-     "end_time": "2023-09-01T16:29:58.813557",
+     "duration": 1.365578,
+     "end_time": "2023-09-01T17:01:36.561226",
      "exception": false,
-     "start_time": "2023-09-01T16:29:57.406128",
+     "start_time": "2023-09-01T17:01:35.195648",
      "status": "completed"
     },
     "tags": []
@@ -735,13 +735,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db4f93f8",
+   "id": "2c4225f2",
    "metadata": {
     "papermill": {
-     "duration": 0.010175,
-     "end_time": "2023-09-01T16:29:58.834033",
+     "duration": 0.010219,
+     "end_time": "2023-09-01T17:01:36.582100",
      "exception": false,
-     "start_time": "2023-09-01T16:29:58.823858",
+     "start_time": "2023-09-01T17:01:36.571881",
      "status": "completed"
     },
     "tags": []
@@ -750,13 +750,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f9fb7f0",
+   "id": "547f9b78",
    "metadata": {
     "papermill": {
-     "duration": 0.010138,
-     "end_time": "2023-09-01T16:29:58.854117",
+     "duration": 0.010576,
+     "end_time": "2023-09-01T17:01:36.603225",
      "exception": false,
-     "start_time": "2023-09-01T16:29:58.843979",
+     "start_time": "2023-09-01T17:01:36.592649",
      "status": "completed"
     },
     "tags": []
@@ -770,14 +770,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "521aa3de",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-09-01T17:01:36.627261Z",
+     "iopub.status.busy": "2023-09-01T17:01:36.626048Z",
+     "iopub.status.idle": "2023-09-01T17:01:38.107484Z",
+     "shell.execute_reply": "2023-09-01T17:01:38.106238Z"
+    },
+    "papermill": {
+     "duration": 1.496745,
+     "end_time": "2023-09-01T17:01:38.110497",
+     "exception": false,
+     "start_time": "2023-09-01T17:01:36.613752",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "train_set, test_set = train_test_split(train, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "75887909",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-09-01T17:01:38.134275Z",
+     "iopub.status.busy": "2023-09-01T17:01:38.133851Z",
+     "iopub.status.idle": "2023-09-01T17:01:38.139361Z",
+     "shell.execute_reply": "2023-09-01T17:01:38.138125Z"
+    },
+    "papermill": {
+     "duration": 0.020443,
+     "end_time": "2023-09-01T17:01:38.141522",
+     "exception": false,
+     "start_time": "2023-09-01T17:01:38.121079",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def prepare(df):\n",
+    "    numeric_col = get_numerical_col(df)\n",
+    "    categorical_col = get_categorical_col(df)\n",
+    "    df = fill_missing_data(df, numeric_col, categorical_col)\n",
+    "    df = scale_features(df)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "be609576",
+   "id": "f4ed70ee",
    "metadata": {
     "papermill": {
-     "duration": 0.009523,
-     "end_time": "2023-09-01T16:29:58.873534",
+     "duration": 0.009779,
+     "end_time": "2023-09-01T17:01:38.161749",
      "exception": false,
-     "start_time": "2023-09-01T16:29:58.864011",
+     "start_time": "2023-09-01T17:01:38.151970",
      "status": "completed"
     },
     "tags": []
@@ -823,14 +880,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 6.77659,
-   "end_time": "2023-09-01T16:29:59.404089",
+   "duration": 8.127195,
+   "end_time": "2023-09-01T17:01:38.793420",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-09-01T16:29:52.627499",
+   "start_time": "2023-09-01T17:01:30.666225",
    "version": "2.4.0"
   }
  },
