--- a/Kaggle/Competitions/spaceship-titanic-regression.ipynb
+++ b/Kaggle/Competitions/spaceship-titanic-regression.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7980bee5",
+   "id": "753d1eb7",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2023-09-01T17:01:34.284177Z",
-     "iopub.status.busy": "2023-09-01T17:01:34.283285Z",
-     "iopub.status.idle": "2023-09-01T17:01:34.707600Z",
-     "shell.execute_reply": "2023-09-01T17:01:34.706480Z"
+     "iopub.execute_input": "2023-09-03T06:21:14.683897Z",
+     "iopub.status.busy": "2023-09-03T06:21:14.682711Z",
+     "iopub.status.idle": "2023-09-03T06:21:15.119035Z",
+     "shell.execute_reply": "2023-09-03T06:21:15.117788Z"
     },
     "papermill": {
-     "duration": 0.437478,
-     "end_time": "2023-09-01T17:01:34.710275",
+     "duration": 0.450563,
+     "end_time": "2023-09-03T06:21:15.122236",
      "exception": false,
-     "start_time": "2023-09-01T17:01:34.272797",
+     "start_time": "2023-09-03T06:21:14.671673",
      "status": "completed"
     },
     "tags": []
@@ -55,13 +55,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac059c3b",
+   "id": "63a45ce5",
    "metadata": {
     "papermill": {
-     "duration": 0.008034,
-     "end_time": "2023-09-01T17:01:34.726775",
+     "duration": 0.008297,
+     "end_time": "2023-09-03T06:21:15.139290",
      "exception": false,
-     "start_time": "2023-09-01T17:01:34.718741",
+     "start_time": "2023-09-03T06:21:15.130993",
      "status": "completed"
     },
     "tags": []
@@ -73,13 +73,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c72b0b2",
+   "id": "d1ee25b8",
    "metadata": {
     "papermill": {
-     "duration": 0.007846,
-     "end_time": "2023-09-01T17:01:34.742749",
+     "duration": 0.008252,
+     "end_time": "2023-09-03T06:21:15.155986",
      "exception": false,
-     "start_time": "2023-09-01T17:01:34.734903",
+     "start_time": "2023-09-03T06:21:15.147734",
      "status": "completed"
     },
     "tags": []
@@ -98,13 +98,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adb91b76",
+   "id": "6f57b004",
    "metadata": {
     "papermill": {
-     "duration": 0.008028,
-     "end_time": "2023-09-01T17:01:34.759300",
+     "duration": 0.008447,
+     "end_time": "2023-09-03T06:21:15.172964",
      "exception": false,
-     "start_time": "2023-09-01T17:01:34.751272",
+     "start_time": "2023-09-03T06:21:15.164517",
      "status": "completed"
     },
     "tags": []
@@ -116,13 +116,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6c5bffe",
+   "id": "424ef89e",
    "metadata": {
     "papermill": {
-     "duration": 0.007919,
-     "end_time": "2023-09-01T17:01:34.775320",
+     "duration": 0.008415,
+     "end_time": "2023-09-03T06:21:15.189830",
      "exception": false,
-     "start_time": "2023-09-01T17:01:34.767401",
+     "start_time": "2023-09-03T06:21:15.181415",
      "status": "completed"
     },
     "tags": []
@@ -133,13 +133,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c61e19d",
+   "id": "448e36d5",
    "metadata": {
     "papermill": {
-     "duration": 0.008235,
-     "end_time": "2023-09-01T17:01:34.792128",
+     "duration": 0.008195,
+     "end_time": "2023-09-03T06:21:15.206676",
      "exception": false,
-     "start_time": "2023-09-01T17:01:34.783893",
+     "start_time": "2023-09-03T06:21:15.198481",
      "status": "completed"
     },
     "tags": []
@@ -153,13 +153,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fd23b1c",
+   "id": "5ccfc066",
    "metadata": {
     "papermill": {
-     "duration": 0.008003,
-     "end_time": "2023-09-01T17:01:34.808522",
+     "duration": 0.00821,
+     "end_time": "2023-09-03T06:21:15.224070",
      "exception": false,
-     "start_time": "2023-09-01T17:01:34.800519",
+     "start_time": "2023-09-03T06:21:15.215860",
      "status": "completed"
     },
     "tags": []
@@ -176,13 +176,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaf49958",
+   "id": "84498595",
    "metadata": {
     "papermill": {
-     "duration": 0.007852,
-     "end_time": "2023-09-01T17:01:34.824654",
+     "duration": 0.008258,
+     "end_time": "2023-09-03T06:21:15.240718",
      "exception": false,
-     "start_time": "2023-09-01T17:01:34.816802",
+     "start_time": "2023-09-03T06:21:15.232460",
      "status": "completed"
     },
     "tags": []
@@ -194,13 +194,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6b7ef94",
+   "id": "fc4e6e3d",
    "metadata": {
     "papermill": {
-     "duration": 0.008014,
-     "end_time": "2023-09-01T17:01:34.840919",
+     "duration": 0.008089,
+     "end_time": "2023-09-03T06:21:15.257250",
      "exception": false,
-     "start_time": "2023-09-01T17:01:34.832905",
+     "start_time": "2023-09-03T06:21:15.249161",
      "status": "completed"
     },
     "tags": []
@@ -228,19 +228,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9b599807",
+   "id": "d7c5a550",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-01T17:01:34.859071Z",
-     "iopub.status.busy": "2023-09-01T17:01:34.858513Z",
-     "iopub.status.idle": "2023-09-01T17:01:34.996169Z",
-     "shell.execute_reply": "2023-09-01T17:01:34.995303Z"
+     "iopub.execute_input": "2023-09-03T06:21:15.277085Z",
+     "iopub.status.busy": "2023-09-03T06:21:15.276476Z",
+     "iopub.status.idle": "2023-09-03T06:21:15.408218Z",
+     "shell.execute_reply": "2023-09-03T06:21:15.406871Z"
     },
     "papermill": {
-     "duration": 0.149786,
-     "end_time": "2023-09-01T17:01:34.998850",
+     "duration": 0.145534,
+     "end_time": "2023-09-03T06:21:15.411217",
      "exception": false,
-     "start_time": "2023-09-01T17:01:34.849064",
+     "start_time": "2023-09-03T06:21:15.265683",
      "status": "completed"
     },
     "tags": []
@@ -256,19 +256,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4012b986",
+   "id": "faeac9a9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-01T17:01:35.017881Z",
-     "iopub.status.busy": "2023-09-01T17:01:35.017076Z",
-     "iopub.status.idle": "2023-09-01T17:01:35.025340Z",
-     "shell.execute_reply": "2023-09-01T17:01:35.024430Z"
+     "iopub.execute_input": "2023-09-03T06:21:15.431025Z",
+     "iopub.status.busy": "2023-09-03T06:21:15.429836Z",
+     "iopub.status.idle": "2023-09-03T06:21:15.438746Z",
+     "shell.execute_reply": "2023-09-03T06:21:15.437605Z"
     },
     "papermill": {
-     "duration": 0.020501,
-     "end_time": "2023-09-01T17:01:35.027756",
+     "duration": 0.021283,
+     "end_time": "2023-09-03T06:21:15.441133",
      "exception": false,
-     "start_time": "2023-09-01T17:01:35.007255",
+     "start_time": "2023-09-03T06:21:15.419850",
      "status": "completed"
     },
     "tags": []
@@ -292,19 +292,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "89a86a22",
+   "id": "0e1e46ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-01T17:01:35.046872Z",
-     "iopub.status.busy": "2023-09-01T17:01:35.046437Z",
-     "iopub.status.idle": "2023-09-01T17:01:35.072417Z",
-     "shell.execute_reply": "2023-09-01T17:01:35.071528Z"
+     "iopub.execute_input": "2023-09-03T06:21:15.461329Z",
+     "iopub.status.busy": "2023-09-03T06:21:15.460530Z",
+     "iopub.status.idle": "2023-09-03T06:21:15.491676Z",
+     "shell.execute_reply": "2023-09-03T06:21:15.490446Z"
     },
     "papermill": {
-     "duration": 0.038632,
-     "end_time": "2023-09-01T17:01:35.074984",
+     "duration": 0.044907,
+     "end_time": "2023-09-03T06:21:15.494714",
      "exception": false,
-     "start_time": "2023-09-01T17:01:35.036352",
+     "start_time": "2023-09-03T06:21:15.449807",
      "status": "completed"
     },
     "tags": []
@@ -485,19 +485,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "58828b12",
+   "id": "f7ae3f12",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-01T17:01:35.095256Z",
-     "iopub.status.busy": "2023-09-01T17:01:35.094355Z",
-     "iopub.status.idle": "2023-09-01T17:01:35.125324Z",
-     "shell.execute_reply": "2023-09-01T17:01:35.124240Z"
+     "iopub.execute_input": "2023-09-03T06:21:15.515803Z",
+     "iopub.status.busy": "2023-09-03T06:21:15.515054Z",
+     "iopub.status.idle": "2023-09-03T06:21:15.547489Z",
+     "shell.execute_reply": "2023-09-03T06:21:15.546606Z"
     },
     "papermill": {
-     "duration": 0.044782,
-     "end_time": "2023-09-01T17:01:35.128675",
+     "duration": 0.046132,
+     "end_time": "2023-09-03T06:21:15.550462",
      "exception": false,
-     "start_time": "2023-09-01T17:01:35.083893",
+     "start_time": "2023-09-03T06:21:15.504330",
      "status": "completed"
     },
     "tags": []
@@ -537,19 +537,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "aa99799d",
+   "id": "fc45bf7f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-01T17:01:35.150216Z",
-     "iopub.status.busy": "2023-09-01T17:01:35.149484Z",
-     "iopub.status.idle": "2023-09-01T17:01:35.183743Z",
-     "shell.execute_reply": "2023-09-01T17:01:35.182637Z"
+     "iopub.execute_input": "2023-09-03T06:21:15.572081Z",
+     "iopub.status.busy": "2023-09-03T06:21:15.571234Z",
+     "iopub.status.idle": "2023-09-03T06:21:15.606279Z",
+     "shell.execute_reply": "2023-09-03T06:21:15.604922Z"
     },
     "papermill": {
-     "duration": 0.047789,
-     "end_time": "2023-09-01T17:01:35.186257",
+     "duration": 0.048772,
+     "end_time": "2023-09-03T06:21:15.609073",
      "exception": false,
-     "start_time": "2023-09-01T17:01:35.138468",
+     "start_time": "2023-09-03T06:21:15.560301",
      "status": "completed"
     },
     "tags": []
@@ -695,19 +695,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "77401c30",
+   "id": "35e59cb4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-01T17:01:35.208248Z",
-     "iopub.status.busy": "2023-09-01T17:01:35.207846Z",
-     "iopub.status.idle": "2023-09-01T17:01:36.558706Z",
-     "shell.execute_reply": "2023-09-01T17:01:36.557468Z"
+     "iopub.execute_input": "2023-09-03T06:21:15.630149Z",
+     "iopub.status.busy": "2023-09-03T06:21:15.629743Z",
+     "iopub.status.idle": "2023-09-03T06:21:16.982310Z",
+     "shell.execute_reply": "2023-09-03T06:21:16.981046Z"
     },
     "papermill": {
-     "duration": 1.365578,
-     "end_time": "2023-09-01T17:01:36.561226",
+     "duration": 1.366833,
+     "end_time": "2023-09-03T06:21:16.985532",
      "exception": false,
-     "start_time": "2023-09-01T17:01:35.195648",
+     "start_time": "2023-09-03T06:21:15.618699",
      "status": "completed"
     },
     "tags": []
@@ -735,13 +735,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c4225f2",
+   "id": "595779de",
    "metadata": {
     "papermill": {
-     "duration": 0.010219,
-     "end_time": "2023-09-01T17:01:36.582100",
+     "duration": 0.010509,
+     "end_time": "2023-09-03T06:21:17.007643",
      "exception": false,
-     "start_time": "2023-09-01T17:01:36.571881",
+     "start_time": "2023-09-03T06:21:16.997134",
      "status": "completed"
     },
     "tags": []
@@ -750,13 +750,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "547f9b78",
+   "id": "7c76a884",
    "metadata": {
     "papermill": {
-     "duration": 0.010576,
-     "end_time": "2023-09-01T17:01:36.603225",
+     "duration": 0.011006,
+     "end_time": "2023-09-03T06:21:17.029791",
      "exception": false,
-     "start_time": "2023-09-01T17:01:36.592649",
+     "start_time": "2023-09-03T06:21:17.018785",
      "status": "completed"
     },
     "tags": []
@@ -771,19 +771,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "521aa3de",
+   "id": "a9353688",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-01T17:01:36.627261Z",
-     "iopub.status.busy": "2023-09-01T17:01:36.626048Z",
-     "iopub.status.idle": "2023-09-01T17:01:38.107484Z",
-     "shell.execute_reply": "2023-09-01T17:01:38.106238Z"
+     "iopub.execute_input": "2023-09-03T06:21:17.054140Z",
+     "iopub.status.busy": "2023-09-03T06:21:17.052859Z",
+     "iopub.status.idle": "2023-09-03T06:21:18.689304Z",
+     "shell.execute_reply": "2023-09-03T06:21:18.687885Z"
     },
     "papermill": {
-     "duration": 1.496745,
-     "end_time": "2023-09-01T17:01:38.110497",
+     "duration": 1.652127,
+     "end_time": "2023-09-03T06:21:18.692803",
      "exception": false,
-     "start_time": "2023-09-01T17:01:36.613752",
+     "start_time": "2023-09-03T06:21:17.040676",
      "status": "completed"
     },
     "tags": []
@@ -798,43 +798,88 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "75887909",
+   "id": "618d9097",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-09-01T17:01:38.134275Z",
-     "iopub.status.busy": "2023-09-01T17:01:38.133851Z",
-     "iopub.status.idle": "2023-09-01T17:01:38.139361Z",
-     "shell.execute_reply": "2023-09-01T17:01:38.138125Z"
+     "iopub.execute_input": "2023-09-03T06:21:18.716772Z",
+     "iopub.status.busy": "2023-09-03T06:21:18.716303Z",
+     "iopub.status.idle": "2023-09-03T06:21:18.990753Z",
+     "shell.execute_reply": "2023-09-03T06:21:18.989586Z"
     },
     "papermill": {
-     "duration": 0.020443,
-     "end_time": "2023-09-01T17:01:38.141522",
+     "duration": 0.289722,
+     "end_time": "2023-09-03T06:21:18.993802",
      "exception": false,
-     "start_time": "2023-09-01T17:01:38.121079",
+     "start_time": "2023-09-03T06:21:18.704080",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "imputer = SimpleImputer(strategy=\"mean\")\n",
+    "\n",
     "def prepare(df):\n",
-    "    numeric_col = get_numerical_col(df)\n",
-    "    categorical_col = get_categorical_col(df)\n",
-    "    df = fill_missing_data(df, numeric_col, categorical_col)\n",
-    "    df = scale_features(df)\n",
+    "    df_num_col = df.select_dtypes(include=[np.number])\n",
+    "    imputer.fit(df_num_col)\n",
+    "    df = imputer.transform(df_num_col)\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "f099b9a6",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-09-03T06:21:19.017365Z",
+     "iopub.status.busy": "2023-09-03T06:21:19.016971Z",
+     "iopub.status.idle": "2023-09-03T06:21:19.033667Z",
+     "shell.execute_reply": "2023-09-03T06:21:19.032229Z"
+    },
+    "papermill": {
+     "duration": 0.031882,
+     "end_time": "2023-09-03T06:21:19.036463",
+     "exception": false,
+     "start_time": "2023-09-03T06:21:19.004581",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.800e+01, 0.000e+00, 5.500e+01, 0.000e+00, 6.560e+02, 0.000e+00],\n",
+       "       [1.700e+01, 0.000e+00, 1.195e+03, 3.100e+01, 0.000e+00, 0.000e+00],\n",
+       "       [2.800e+01, 0.000e+00, 0.000e+00, 0.000e+00, 0.000e+00, 0.000e+00],\n",
+       "       ...,\n",
+       "       [2.200e+01, 1.580e+02, 0.000e+00, 4.760e+02, 0.000e+00, 2.600e+01],\n",
+       "       [3.400e+01, 3.790e+02, 0.000e+00, 1.626e+03, 0.000e+00, 0.000e+00],\n",
+       "       [2.800e+01, 7.000e+00, 4.890e+02, 0.000e+00, 4.000e+00, 6.027e+03]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prepare(train_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f4ed70ee",
+   "id": "2945f0b6",
    "metadata": {
     "papermill": {
-     "duration": 0.009779,
-     "end_time": "2023-09-01T17:01:38.161749",
+     "duration": 0.010565,
+     "end_time": "2023-09-03T06:21:19.057996",
      "exception": false,
-     "start_time": "2023-09-01T17:01:38.151970",
+     "start_time": "2023-09-03T06:21:19.047431",
      "status": "completed"
     },
     "tags": []
@@ -880,14 +925,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 8.127195,
-   "end_time": "2023-09-01T17:01:38.793420",
+   "duration": 9.017374,
+   "end_time": "2023-09-03T06:21:19.690249",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-09-01T17:01:30.666225",
+   "start_time": "2023-09-03T06:21:10.672875",
    "version": "2.4.0"
   }
  },
